# checkio

./: README.md  pyproject.toml
.github/workflows/: github_actions.yml
src/checkio/: asciikassi.py  cutthenegativity.py  filip.py  hairofthedog.py  millifaersla.py  secret.py  shandy.py  spavanac.py  thendaysofchristmas.py  whichisgreater.py
tests/: test_asciikassi.py  test_cutthenegativity.py  test_filip.py  test_hairofthedog.py  test_millifaersla.py  test_secret.py  test_shandy.py  test_spavanac.py  test_thendaysofchristmas.py  test_whichisgreater.py
