[project]
name = "checkio"
version = "0.1.0"
description = "first step with poetry "
authors = [
    {name = "alexandre.wallez",email = "alexandre.wallez.etu@univ-lille.fr"}
]
readme = "README.md"

[tool.poetry]
packages = [{include = "checkio", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
marimo = "^0.16.5"
python = "^3.13.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.0.0"
pylint = "^3.3.8"
coverage = "^7.10.7"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "src"]

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = true
